# SensorSync

./: readme.md
Integrating_REST_API_with-AWS_Cognito/: .env
Integrating_REST_API_with-AWS_Cognito/src/: handler.rs  main.rs  sensor.rs
awsiot/: Cargo.toml  README.md
awsiot/src/: main.rs
fetchfromdatabase/: fetch.py  readme.md
frontend_backend/back-end/: .env
frontend_backend/back-end/src/: handler.rs  main.rs  sensor.rs
frontend_backend/front-end/: Cargo.toml  Trunk.toml  index.html  readme.md
frontend_backend/front-end/src/: lib.rs  router.rs
frontend_backend/front-end/src/components/atoms/: bb_button.rs  mod.rs
frontend_backend/front-end/src/components/molecules/: account_form_login.rs  otpverify.rs
frontend_backend/front-end/src/pages/: confirmsignup.rs  create_account.rs  delete.rs  home.rs  login.rs  post_data.rs  put_data.rs
lambda_awsiot_database_linker/: lambdalinker.py  readme.md
task-1/: Cargo.toml  readme.md
task-1/src/: handler.rs  lib.rs  main.rs  sensor.rs
task-2/: Cargo.toml  readme.md
task-2/src/: auth.rs  handler.rs  lib.rs  main.rs  middleware.rs  sensor.rs
task-3/back-end/: readme.md
task-3/back-end/src/: handler.rs  main.rs  sensor.rs
task-3/front-end/: readme.md
task-3/front-end/src/: store.rs
task-3/front-end/src/api/: mod.rs
task-3/front-end/src/components/atoms/: bb_link.rs  bb_text_input.rs
task-3/front-end/src/components/molecules/: account_form.rs  mod.rs
task-3/front-end/src/components/organisms/: navbar.rs
task-3/front-end/src/pages/: get_data.rs  logout.rs  mod.rs
