[package]
name = "solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
stylist = { version = "0.11.0", features = ["yew"] }
wasm-bindgen = "0.2.80"
web-sys = { version = "0.3.57", features = ["HtmlInputElement", "HtmlSelectElement"] }
gloo = "0.11.0"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.30"
serde = "1.0.136"
serde_json = "1.0.79"
yewdux = "0.9.0"
thiserror = "1.0.30"
gloo-net = "0.5.0"
reqwest = { version = "0.12.4", default-features = false, features = ["json"] } 



